# project-template

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: checker.yml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: checker.yml
{{cookiecutter.project_name}}/cleaning_pipeline/: README.md
{{cookiecutter.project_name}}/cleaning_pipeline/src/: base_cleaning_pipeline.py  lexical_cleaning_pipeline.py
{{cookiecutter.project_name}}/cleaning_pipeline/src/utils/: base.py  lexical.py
{{cookiecutter.project_name}}/cleaning_pipeline/tests/: test_base_utils.py
{{cookiecutter.project_name}}/src/: constants.py
