[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
    authors = ["{{cookiecutter.author_name}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
lightning = ">=2.0.6"
omegaconf = ">=2.3.0"
pydantic = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.2.1"
wemake-python-styleguide = "0.17.0"
vulture = "2.7"
pytest = "7.3.1"
flake8 = "3.9.1"
isort = "5.12.0"
black = "23.1.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "3.6.3"
jupyterlab-lsp = "4.0.1"
python-lsp-server = {version = "1.7.2", extras = ["python"]}
matplotlib = "^3.7.1"
ipywidgets = "^8.0.6"
ipyplot = "^1.1.1"

[tool.project]
min_confidence = 80
paths = ["src"]
ignore_names = ["args", "kwargs",]
sort_by_size = true
verbose = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
